PIC-2605 . Populate courtroom filters
. Updated filter predicates with recently added filter combinations.

. Added repository method to bring distinct courtrooms for a court code.